--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "papers-time-machine",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "version": "1.0.0",
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
